# jobify-scraper

./: .gitignore  README.md  pyproject.toml
.github/workflows/: update_jobify.yaml
extracted/: spotify.csv
jobify/: config.py  database.py  firebase.py  main.py  scraper.py  utils.py
jobify/secrets/: serviceAccountKey.py
jobify/sources/: Spotify.py  __init__.py
jobify/tests/: test_scraper.py
sqlite/: jobs.db
